# file-storage

./: README.md
backend/: .env  Cargo.toml
backend/migrations/2023-06-23-155155_create_user/: up.sql
backend/src/: jwt.rs  main.rs  models.rs  schema.rs
backend/src/api/: login.rs  mod.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/routes/: index.module.scss  index.tsx  login.tsx
frontend/src/types/: type.ts  types.d.ts
