[package]
name = "file-storage-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.18"
tokio = { version = "1.28.2", features = ["full"] }
jsonwebtoken = "8.3.0"
serde = "1.0.164"
serde_json = "1.0.97"
reqwest = "0.11.18"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
tower-http = { version = "0.4.1", features = ["trace"] }
